<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiaryCall</string>
    <string name="action_settings">Settings</string>
    <string name="cadastrarButton">Create Contact</string>
    <string name="edtPhone">Telefone </string>
    <string name="edtName">Nome</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="threadStart">Thread Start</string>
    <string name="offButton">Desligar</string>
    <string name="chronometer">Chronometer</string>
    <string name="myContacts">Meus Contatos</string>
    <string name="searchContact">SEARCH</string>
    <string name="apagar">Apagar</string>
    <string name="editar">Editar</string>
    <string name="sendmsg">Enviar Mensagem</string>
    <string name="salvar">Salvar</string>
    <string name="menssage">Menssagem</string>
    <string name="enviar">Enviar</string>
    <string name="to">Para</string>
    <string name="acceptButton">Atender</string>
    

</resources>
