<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/edtName" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint=""
        android:inputType="text"
        android:width="190dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtName"
        android:layout_below="@+id/edtName"
        android:text="@string/edtPhone" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint=""
        android:inputType="phone"
        android:width="190dip" >
    </EditText>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtPhone"
        android:layout_centerVertical="true"
        android:text="@string/apagar" />

    <Button
        android:id="@+id/buttonEdit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/edtPhone"
        android:onClick="editarInfo"
        android:text="@string/editar" />

    <Button
        android:id="@+id/buttonSend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonEdit"
        android:layout_alignBottom="@+id/buttonEdit"
        android:layout_centerHorizontal="true"
        android:onClick="enviarMsg"
        android:text="@string/sendmsg" />

    <Button
        android:id="@+id/buttonSalvar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edtPhone"
        android:layout_below="@+id/edtPhone"
        android:text="@string/salvar"
        android:visibility="invisible"
        android:onClick="salvarInfo" 
        />

</RelativeLayout>
