<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diarycall.GUI.DiaryCall$PlaceholderFragment" >

    <Button
        android:id="@+id/cadastrarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickCadastro"
        android:text="@string/cadastrarButton" />

    <TextView
        android:id="@+id/myContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listContacts"
        android:layout_below="@+id/cadastrarButton"
        android:text="@string/myContacts"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@+id/listContacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myContacts"
        android:layout_marginTop="35dp" >
    </ListView>

    <EditText
        android:id="@+id/searchContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myContacts"
        android:layout_below="@+id/myContacts"
        android:ems="10"
        android:hint="@string/searchContact" >

        <requestFocus />
    </EditText>
    
</RelativeLayout>
